tdf#99073 fix double-click tree node expansion in base

fallout from
commit	cf0c04a428754dfd5aa477cebc5441bc74e27005
"convert Link<> to typed"

Change-Id: I3452b76320c5355aaf84a0bd67c99b281bb46d0f